--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application
         android:allowBackup="true"
         android:label="YT Long Player"
+        android:icon="@drawable/app_icon"
+        android:roundIcon="@drawable/app_icon"
         android:theme="@style/Theme.YouTubeNovelPlayer">
         
         <activity
